--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,63 +1,83 @@
 # 2023-10-14
 
-共 265 条
+共 282 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 19:00:53 GMT+0800 (China Standard Time) -->
-1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
-1. [中纪委：3个纪委“内鬼”被查](https://so.toutiao.com/search?keyword=中纪委：3个纪委“内鬼”被查)
-1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
+<!-- 最后更新时间 Sat Oct 14 2023 20:07:45 GMT+0800 (China Standard Time) -->
 1. [景德镇女孩的碎纸图案陶瓷被疯抢](https://so.toutiao.com/search?keyword=景德镇女孩的碎纸图案陶瓷被疯抢)
+1. [河南郸城一玉米地被村民集体哄抢](https://so.toutiao.com/search?keyword=河南郸城一玉米地被村民集体哄抢)
+1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
+1. [孙宇鑫父亲今日离世捐献遗体](https://so.toutiao.com/search?keyword=孙宇鑫父亲今日离世捐献遗体)
+1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
 1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
 1. [媒体：央视前解说段暄失联](https://so.toutiao.com/search?keyword=媒体：央视前解说段暄失联)
-1. [赖清德临时取消参加辩论会被批](https://so.toutiao.com/search?keyword=赖清德临时取消参加辩论会被批)
-1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
+1. [中纪委：3个纪委“内鬼”被查](https://so.toutiao.com/search?keyword=中纪委：3个纪委“内鬼”被查)
+1. [以方称击毙哈马斯“精锐突击队”指挥官](https://so.toutiao.com/search?keyword=以方称击毙哈马斯“精锐突击队”指挥官)
 1. [官方辟谣女生给男生下毒致身亡](https://so.toutiao.com/search?keyword=官方辟谣女生给男生下毒致身亡)
 1. [巴勒斯坦称或面临第二次浩劫日灾难](https://so.toutiao.com/search?keyword=巴勒斯坦称或面临第二次浩劫日灾难)
 1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
-1. [陈奕迅澳门演唱会被要求说国语](https://so.toutiao.com/search?keyword=陈奕迅澳门演唱会被要求说国语)
-1. [普京提出斡旋 哈马斯“高度评价”](https://so.toutiao.com/search?keyword=普京提出斡旋+哈马斯“高度评价”)
 1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
+1. [陈奕迅澳门演唱会被要求说国语](https://so.toutiao.com/search?keyword=陈奕迅澳门演唱会被要求说国语)
+1. [王毅谈巴以冲突：应尽快停火止战](https://so.toutiao.com/search?keyword=王毅谈巴以冲突：应尽快停火止战)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
 1. [“公募一哥”王亚伟一天内两度发声](https://so.toutiao.com/search?keyword=“公募一哥”王亚伟一天内两度发声)
+1. [韩国执政党宣布领导层决定集体辞职](https://so.toutiao.com/search?keyword=韩国执政党宣布领导层决定集体辞职)
+1. [华为手机国内销量份额逐周提升](https://so.toutiao.com/search?keyword=华为手机国内销量份额逐周提升)
+1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
+1. [埃及：须停止在加沙的地面军事行动](https://so.toutiao.com/search?keyword=埃及：须停止在加沙的地面军事行动)
+1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
+1. [高铁静音车厢买票攻略](https://so.toutiao.com/search?keyword=高铁静音车厢买票攻略)
+1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
+1. [问界新M7爆单余承东进厂保交付](https://so.toutiao.com/search?keyword=问界新M7爆单余承东进厂保交付)
+1. [女子按月还贷银行未收到？法官调解](https://so.toutiao.com/search?keyword=女子按月还贷银行未收到？法官调解)
+1. [美国共和党提名乔丹担任众议院议长](https://so.toutiao.com/search?keyword=美国共和党提名乔丹担任众议院议长)
+1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
+1. [江西一直升机迫降稻田机上人员平安](https://so.toutiao.com/search?keyword=江西一直升机迫降稻田机上人员平安)
+1. [日称将向吉布提派飞机协助从以撤侨](https://so.toutiao.com/search?keyword=日称将向吉布提派飞机协助从以撤侨)
+1. [西安的文化和美食有多美](https://so.toutiao.com/search?keyword=西安的文化和美食有多美)
+1. [男子婚宴用筷子拿烟动作娴熟](https://so.toutiao.com/search?keyword=男子婚宴用筷子拿烟动作娴熟)
+1. [医生解读奥运冠军杨威为何佩戴呼吸机](https://so.toutiao.com/search?keyword=医生解读奥运冠军杨威为何佩戴呼吸机)
+1. [餐厅单价16元水蒸蛋仅一层蛋皮](https://so.toutiao.com/search?keyword=餐厅单价16元水蒸蛋仅一层蛋皮)
+1. [广西民宗委原党组成员潘瑾兴被双开](https://so.toutiao.com/search?keyword=广西民宗委原党组成员潘瑾兴被双开)
+1. [中沙实弹射击训练武器全由中方提供](https://so.toutiao.com/search?keyword=中沙实弹射击训练武器全由中方提供)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [一架载有医疗物资的飞机在埃及降落](https://so.toutiao.com/search?keyword=一架载有医疗物资的飞机在埃及降落)
+1. [微软正式完成收购动视暴雪的交易](https://so.toutiao.com/search?keyword=微软正式完成收购动视暴雪的交易)
+1. [河南一男子误喝汽车防冻液身亡](https://so.toutiao.com/search?keyword=河南一男子误喝汽车防冻液身亡)
+1. [主持人赵普悼念导演郭宝昌](https://so.toutiao.com/search?keyword=主持人赵普悼念导演郭宝昌)
+1. [波兰启用长约200公里的波俄边境墙](https://so.toutiao.com/search?keyword=波兰启用长约200公里的波俄边境墙)
+1. [专家：胰腺癌早期容易被当成胃病](https://so.toutiao.com/search?keyword=专家：胰腺癌早期容易被当成胃病)
+1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
+1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
+1. [华为新机火爆带动供应商订单量上涨](https://so.toutiao.com/search?keyword=华为新机火爆带动供应商订单量上涨)
+1. [赖清德临时取消参加辩论会被批](https://so.toutiao.com/search?keyword=赖清德临时取消参加辩论会被批)
+1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
+1. [普京提出斡旋 哈马斯“高度评价”](https://so.toutiao.com/search?keyword=普京提出斡旋+哈马斯“高度评价”)
 1. [知情人：段暄正配合相关部门调查](https://so.toutiao.com/search?keyword=知情人：段暄正配合相关部门调查)
 1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
 1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
 1. [柯文哲宜兰造势批民进党堕落速度快](https://so.toutiao.com/search?keyword=柯文哲宜兰造势批民进党堕落速度快)
-1. [村超超级星期六又来啦](https://so.toutiao.com/search?keyword=村超超级星期六又来啦)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [以方称击毙哈马斯“精锐突击队”指挥官](https://so.toutiao.com/search?keyword=以方称击毙哈马斯“精锐突击队”指挥官)
-1. [中国大哥与俄罗斯大哥拼桌喝酒](https://so.toutiao.com/search?keyword=中国大哥与俄罗斯大哥拼桌喝酒)
-1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
 1. [哈马斯：巴勒斯坦人不会离开家园](https://so.toutiao.com/search?keyword=哈马斯：巴勒斯坦人不会离开家园)
-1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
 1. [孙海洋向寻亲家长道歉](https://so.toutiao.com/search?keyword=孙海洋向寻亲家长道歉)
-1. [“宝马女”母亲称女婿半年家暴7次](https://so.toutiao.com/search?keyword=“宝马女”母亲称女婿半年家暴7次)
 1. [侯友宜批民进党让台湾安全受到挑战](https://so.toutiao.com/search?keyword=侯友宜批民进党让台湾安全受到挑战)
-1. [男子持刀捅伤妻子 伤者在ICU救治](https://so.toutiao.com/search?keyword=男子持刀捅伤妻子+伤者在ICU救治)
 1. [外媒：以军向加沙派出首批精锐部队](https://so.toutiao.com/search?keyword=外媒：以军向加沙派出首批精锐部队)
 1. [韩媒担忧拦截系统无法应对朝鲜火炮](https://so.toutiao.com/search?keyword=韩媒担忧拦截系统无法应对朝鲜火炮)
-1. [台积电：已获准于南京持续营运](https://so.toutiao.com/search?keyword=台积电：已获准于南京持续营运)
-1. [高铁静音车厢买票攻略](https://so.toutiao.com/search?keyword=高铁静音车厢买票攻略)
-1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
 1. [华北南部黄淮等地大气扩散条件一般](https://so.toutiao.com/search?keyword=华北南部黄淮等地大气扩散条件一般)
 1. [退休8年 辽宁省公安厅一干部被查](https://so.toutiao.com/search?keyword=退休8年+辽宁省公安厅一干部被查)
 1. [赖清德：不可能期待侯友宜夸奖我](https://so.toutiao.com/search?keyword=赖清德：不可能期待侯友宜夸奖我)
-1. [女子按月还贷银行未收到？法官调解](https://so.toutiao.com/search?keyword=女子按月还贷银行未收到？法官调解)
 1. [孙女发现病逝爷爷微信置顶是自己](https://so.toutiao.com/search?keyword=孙女发现病逝爷爷微信置顶是自己)
 1. [新一轮冷空气到货](https://so.toutiao.com/search?keyword=新一轮冷空气到货)
-1. [华为手机国内销量份额逐周提升](https://so.toutiao.com/search?keyword=华为手机国内销量份额逐周提升)
 1. [感受山东大集的人间烟火](https://so.toutiao.com/search?keyword=感受山东大集的人间烟火)
 1. [女子跳河轻生路过遛狗男子救人](https://so.toutiao.com/search?keyword=女子跳河轻生路过遛狗男子救人)
-1. [男子婚宴用筷子拿烟动作娴熟](https://so.toutiao.com/search?keyword=男子婚宴用筷子拿烟动作娴熟)
 1. [柯文哲：韩国瑜真的很想促成蓝白合](https://so.toutiao.com/search?keyword=柯文哲：韩国瑜真的很想促成蓝白合)
 1. [女子偷玉米被发现下跪求饶](https://so.toutiao.com/search?keyword=女子偷玉米被发现下跪求饶)
-1. [女子在景区提醒禁练铁头功处撞破头](https://so.toutiao.com/search?keyword=女子在景区提醒禁练铁头功处撞破头)
-1. [17岁男生杀害65岁房东 已被逮捕](https://so.toutiao.com/search?keyword=17岁男生杀害65岁房东+已被逮捕)
 1. [全国多名纪检干部同日被查](https://so.toutiao.com/search?keyword=全国多名纪检干部同日被查)
 1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
 1. [白宇帆宁理携手《繁城之下》破案](https://so.toutiao.com/search?keyword=白宇帆宁理携手《繁城之下》破案)
-1. [美19名州长致信拜登要求明确支持以](https://so.toutiao.com/search?keyword=美19名州长致信拜登要求明确支持以)
 1. [证监会调整优化融券相关制度](https://so.toutiao.com/search?keyword=证监会调整优化融券相关制度)
 1. [侯友宜要赖清德讲清是否反“台独”](https://so.toutiao.com/search?keyword=侯友宜要赖清德讲清是否反“台独”)
 1. [外媒：德国同意以军借用2架无人机](https://so.toutiao.com/search?keyword=外媒：德国同意以军借用2架无人机)
@@ -66,7 +86,6 @@
 1. [战火下的巴以普通人声音](https://so.toutiao.com/search?keyword=战火下的巴以普通人声音)
 1. [博雷利此次访华有何目的](https://so.toutiao.com/search?keyword=博雷利此次访华有何目的)
 1. [报告称朝鲜导弹可使美防御系统失效](https://so.toutiao.com/search?keyword=报告称朝鲜导弹可使美防御系统失效)
-1. [河南一男子误喝汽车防冻液身亡](https://so.toutiao.com/search?keyword=河南一男子误喝汽车防冻液身亡)
 1. [哈登：与莫雷绝无重修旧好可能](https://so.toutiao.com/search?keyword=哈登：与莫雷绝无重修旧好可能)
 1. [舒默将率领美国国会代表团访以色列](https://so.toutiao.com/search?keyword=舒默将率领美国国会代表团访以色列)
 1. [CBA联赛21日将正式开赛](https://so.toutiao.com/search?keyword=CBA联赛21日将正式开赛)
@@ -82,7 +101,6 @@
 1. [保罗：这不是我第一次换队](https://so.toutiao.com/search?keyword=保罗：这不是我第一次换队)
 1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
 1. [长春交通治理引发争议](https://so.toutiao.com/search?keyword=长春交通治理引发争议)
-1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
 1. [张翰新剧搭档杨烁](https://so.toutiao.com/search?keyword=张翰新剧搭档杨烁)
 1. [女子用红绳绑鸡肉钓鱼真有鱼上钩了](https://so.toutiao.com/search?keyword=女子用红绳绑鸡肉钓鱼真有鱼上钩了)
 1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
@@ -123,7 +141,6 @@
 1. [96岁母亲上厕所摔倒60岁女儿扶不动](https://so.toutiao.com/search?keyword=96岁母亲上厕所摔倒60岁女儿扶不动)
 1. [《为有暗香来》开播](https://so.toutiao.com/search?keyword=《为有暗香来》开播)
 1. [C罗将在明年迎来第六届欧洲杯](https://so.toutiao.com/search?keyword=C罗将在明年迎来第六届欧洲杯)
-1. [主持人赵普悼念导演郭宝昌](https://so.toutiao.com/search?keyword=主持人赵普悼念导演郭宝昌)
 1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
 1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
 1. [林志颖挑战四米高台表演](https://so.toutiao.com/search?keyword=林志颖挑战四米高台表演)
